Change homepage.html to index.html for deploy web

--- a/Booth Directory Page.html
+++ b/Booth Directory Page.html
@@ -25,7 +25,7 @@
         <div class="cell c4"><a href="Booth4 Page.html">Booth 4</a></div>
     </div>
 
-    <a class="center-home" href="Homepage.html">Homepage</a>
+    <a class="center-home" href="index.html">Homepage</a>
 </body>
 
 </html>
