--- a/Booth2 Page.html
+++ b/Booth2 Page.html
@@ -14,7 +14,7 @@
   </header>
 
   <div class="nav">
-    <a href="Homepage.html">Homepage</a>
+    <a href="index.html">Homepage</a>
     <a href="Booth Directory Page.html">Booth Directory</a>
     <a href="Booth1 Page.html">Booth1</a>
     <a href="Booth2 Page.html">Booth2</a>
@@ -145,7 +145,7 @@
   <div class="menu-btn" onclick="toggleMenu()">☰</div>
 
   <div id="sidebar" class="sidebar">
-    <a href="homepage.html">Homepage</a>
+    <a href="index.html">Homepage</a>
     <a href="Booth Directory Page.html"">Booth Directory</a>
     <a href="Booth1 Page.html">Booth1 </a>
     <a href="Booth2 Page.html">Booth2 </a>
