--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul class="side-list">
                 <img src="img/G15_logo.png" class="side-logo">
-                <li><a href="Homepage.html"><span class="icon">🏠</span><span class="label">Homepage</span></a></li>
+                <li><a href="index.html"><span class="icon">🏠</span><span class="label">Homepage</span></a></li>
                 <li>
                 <a href="Booth Directory Page.html"><span class="icon">📂</span><span class="label">Booth Directory Page</span></a>
                     <a href="Booth1 Page.html"><span class="icon">•</span><span class="label">Booth1 Page</span></a>
