Add Logo , Fix Booth4 Page

--- a/Booth3 Page.html
+++ b/Booth3 Page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Make Up Booth</title>
+    <link rel="icon" type="image/png" href="img/logo b3.png">
     <link rel="stylesheet" href="CSS/Booth3 Page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
