--- a/Booth4 Page.html
+++ b/Booth4 Page.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="CSS/Booth4 Page.css">
     <script src="Javascript/Booth4page.js"></script>
     <title>Booth4</title>
+    <link rel="icon" type="image/png" href="img/G15_logo.png">
 </head>
 <body>
   <div class ="Heading">
