--- a/Booth Directory Page.html
+++ b/Booth Directory Page.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Booth Directory Page</title>
+    <link rel="icon" type="image/png" href="img/G15_logo.png">
     <link rel="stylesheet" href="CSS/Booth Directory Page.css">
 </head>
 
