--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grease & Cheese</title>
+    <link rel="icon" type="image/png" href="img/โลโก้Booth1page.png">
     <link rel="stylesheet" href="CSS/Booth1 Page.css">
 
    <link rel="preconnect" href="https://fonts.googleapis.com">
