--- a/Registration Page.html
+++ b/Registration Page.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Our Festival — Registration</title>
+  <link rel="icon" type="image/png" href="img/G15_logo.png">
   <link rel="stylesheet" href="CSS\Registration Page.css">
 </head>
 <body>
