--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <link rel="icon" type="image/png" href="img/G15_logo.png">
     <link rel="stylesheet" href="CSS/Homepage.css">
     <script src="Javascript/Homepage.js" defer></script>
 </head>
