Fix Booth Directory Page styles

--- a/Booth Directory Page.html
+++ b/Booth Directory Page.html
@@ -10,23 +10,30 @@
 </head>
 
 <body>
+    <a href="index.html">
+        <img src="img/G15_logo.png" class="Homepage-logo">
+    </a>
     <div class="bg-quarters" aria-hidden="true">
-        <div class="q q1"></div>
-        <div class="q q2"></div>
-        <div class="q q3"></div>
-        <div class="q q4"></div>
+        <div class="q q1">
+            <img src="img/pizza.jpg" class="booth-image">
+        </div>
+        <div class="q q2">
+            <img src="img/cakebooth3.jpg" class="booth-image">
+        </div>
+        <div class="q q3">
+            <img src="img/makeupbooth2.jpg" class="booth-image">
+        </div>
+        <div class="q q4">
+            <img src="img/activebooth2.jpg" class="booth-image">
+        </div>
     </div>
-
     <div class="content-grid" aria-label="Booth directory">
-        <div class="cell c1"><a href="Booth1 Page.html">Booth 1 <img src="img/โลโก้Booth1page.png" alt="Booth 1 logo"
-                    class="booth-logo"></a></div>
-        <div class="cell c2"><a href="Booth2 Page.html">Booth 2</a></div>
-        <div class="cell c3"><a href="Booth3 Page.html">Booth 3 <img src="img/logo b3.png" alt="Booth 3 logo"
-                    class="booth-logo"></a></div>
-        <div class="cell c4"><a href="Booth4 Page.html">Booth 4</a></div>
+        <div class="cell-c1"><a href="Booth1 Page.html">Grease & Cheese</a></div>
+        <div class="cell-c2"><a href="Booth2 Page.html">KANOMWHANNN</a></div>
+        <div class="cell-c3"><a href="Booth3 Page.html">Make Up Booth</a></div>
+        <div class="cell-c4"><a href="Booth4 Page.html">Activities</a></div>
     </div>
-
-    <a class="center-home" href="index.html">Homepage</a>
+    
 </body>
 
 </html>
