--- a/Booth4 Page.html
+++ b/Booth4 Page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Booth4 Page.css">
     <script src="Javascript/Booth4page.js"></script>
-    <title>Booth4</title>
+    <title>Activities</title>
     <link rel="icon" type="image/png" href="img/G15_logo.png">
 </head>
 <body>
