Change Bg booth4 and font

--- a/Booth4 Page.html
+++ b/Booth4 Page.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/Booth4 Page.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
     <script src="Javascript/Booth4page.js"></script>
     <title>Activities</title>
     <link rel="icon" type="image/png" href="img/G15_logo.png">
@@ -35,7 +38,7 @@
 
         <section class="booth-list">
            <div class="booth">
-               <h2>เกมปาลูกโป่ง</h2>
+               <h2>🎈เกมปาลูกโป่ง</h2>
                <p>มาลองความแม่นยำของคุณ แล้วรับของรางวัลสุดแสนจะน่ารักกลับบ้านกัน!</p>
                <P>≫เริ่มต้น 3 ดอก 20≪</P>
              <div class="photo">
@@ -44,7 +47,7 @@
            </div>
 
            <div class="booth">
-               <h2>ช้อนปลา</h2>
+               <h2>🎣 ช้อนปลา</h2>
                <p>มาทดสอบฝีมือกันหน่อยนักช้อนปลาทั้งหลาย!</p>
                <P>≫เริ่มต้น 4 ไม้ 20≪</P>
                <div class="photo">
@@ -53,7 +56,7 @@
            </div>
 
            <div class="booth">
-              <h2>จับฉลาก</h2>
+              <h2>⭐️ จับฉลาก</h2>
               <p>หากคุณสุ่มการ์ดได้เกลือ ไม่ต้องห่วงสุ่มที่นี่อย่างน้อยก็ต้องได้ของกลับบ้าน!!</p>
               <P>≫ช็อปครบ 50 จับได้ 1ครั้ง≪</P>
               <div class="photo">
@@ -62,7 +65,7 @@
            </div>
 
            <div class="booth">
-            <h2>ซุ้มยิงปืน</h2>
+            <h2>🔫 ซุ้มยิงปืน</h2>
             <p>ปั้งๆ คุณแน่แค่ไหนมาลองหน่อยไหม</p>
             <P>≫เริ่มต้น 6 นัด 50≪</P>
             <div class="photo">
