Add fastival on booth 4

--- a/Booth4 Page.html
+++ b/Booth4 Page.html
@@ -72,6 +72,24 @@
               <img src="img/ซุ้มยิงปืน.jpg">
             </div>
            </div>
+
+           <div class="booth">
+            <h2>💰 บิงโก</h2>
+            <p>บิงโก ลุ้นมันส์สนุกหยุดไม่ได้</p>
+            <P>≫1 ใบเริ่มต้น 20≪</P>
+            <div class="photo">
+              <img src="img/เกม-บิงโก-2.jpg">
+            </div>
+           </div>
+
+           <div class="booth">
+            <h2>🥫 ปากระป๋อง</h2>
+            <p>มาปาให้สุดแรงลุ้นของรางวัล</p>
+            <P>≫3 ลูก 35 ≪</P>
+            <div class="photo">
+              <img src="img/ปากระป่อง-3.jpg">
+            </div>
+           </div>
          </section>
   </div>
   <footer>
