--- a/index.html
+++ b/index.html
@@ -83,47 +83,47 @@
             <hr>
             
             <section class="Members">
-                <h2>Meet The Team</h2>
+                <h2>Rules</h2>
                 <div class="members-grid">
                     <div class="member-card">
                         <span class="name">ธีรภัทร ใจคำ</span>
                         <span class="id">6809650044</span>
-                        <span class="role">Project Manager, Back-End</span>
+                        <span class="role">Project Manager, UX/UI Designer(Homepage)</span>
                     </div>
                     <div class="member-card">
                         <span class="name">กิตติทัช ศรศรี</span>
                         <span class="id">6809650358</span>
-                        <span class="role">Front-End</span>
+                        <span class="role">Front-End(Booth Directory Page)</span>
                     </div>
                     <div class="member-card">
                         <span class="name">อรจิรา รอดกลึง</span>
                         <span class="id">6809650135</span>
-                        <span class="role">Front-End, UX/UI Designer</span>
+                        <span class="role">Front-End, UX/UI Designer(Booth1 Page)</span>
                     </div>
                     <div class="member-card">
                         <span class="name">ณัฏฐนิชา เขียวบุญจันทร์</span>
                         <span class="id">6809650465</span>
-                        <span class="role">Front-End</span>
+                        <span class="role">Front-End(Booth2 Page)</span>
                     </div>
                     <div class="member-card">
                         <span class="name">ภูพิชญา แก่นกระจ่าง</span>
                         <span class="id">6809650291</span>
-                        <span class="role">Front-End</span>
+                        <span class="role">Front-End(Booth3 Page)</span>
                     </div>
                     <div class="member-card">
                         <span class="name">จณิตา นาทอง</span>
                         <span class="id">6809650366</span>
-                        <span class="role">Front-End</span>
+                        <span class="role">Front-End(Booth4 Page)</span>
                     </div>
                     <div class="member-card">
                         <span class="name">กานต์ ตันสกุล</span>
                         <span class="id">6809650168</span>
-                        <span class="role">Front-End, Back-End</span>
+                        <span class="role">Front-End(Registration Page), Back-End</span>
                     </div>
                     <div class="member-card">
                         <span class="name">จิรพัฒน์ แก้วพรม</span>
                         <span class="id">6809650374</span>
-                        <span class="role">Front-End, Back-End</span>
+                        <span class="role">Front-End(Feedback Page), Back-End</span>
                     </div>
                 </div>
             </section>
