Polish feedback page UI.

--- a/Leave Your Feedback Page.html
+++ b/Leave Your Feedback Page.html
@@ -10,27 +10,24 @@
 </head>
 <body>
     
-    <div class ="Heading">
-        <button id="sidebarToggle" class="toggle-btn" aria-label="Toggle sidebar" aria-controls="leftSide" aria-expanded="true">☰</button>
-        <img src="img/G15_logo.png" class="heading-logo">
-        <p class="heading-title">| Feedback</p>
+    <div class="Heading">
+        <button id="sidebarToggle" class="toggle-btn">☰</button>
+        <img src="img/G15_logo.png" class="heading-logo" alt="Logo">
     </div>
 
 
     <aside id="leftSide" class="left-side">
         <nav>
+            <img src="img/G15_logo.png" class="side-logo" alt="Logo Sidebar">
             <ul class="side-list">
-                <img src="img/G15_logo.png" class="side-logo">
-                <li><a href="index.html"><span class="icon">🏠</span><span class="label">Homepage</span></a></li>
-                <li>
-                <a href="Booth Directory Page.html"><span class="icon">📂</span><span class="label">Booth Directory Page</span></a>
-                    <a href="Booth1 Page.html"><span class="icon">•</span><span class="label">Booth1 Page</span></a>
-                    <a href="Booth2 Page.html"><span class="icon">•</span><span class="label">Booth2 Page</span></a>
-                    <a href="Booth3 Page.html"><span class="icon">•</span><span class="label">Booth3 Page</span></a>
-                    <a href="Booth4 Page.html"><span class="icon">•</span><span class="label">Booth4 Page</span></a>
-                </li>
-                <li><a href="Registration Page.html"><span class="icon">📝</span><span class="label">Registration Page</span></a></li>
-                <li><a href="Leave Your Feedback Page.html"><span class="icon">💬</span><span class="label">Leave Your Feedback Page</span></a></li>
+                <li><a href="index.html"><span class="icon">🏠</span>Homepage</a></li>
+                <li><a href="Booth Directory Page.html"><span class="icon">📂</span>Booth Directory</a></li>
+                <li style="padding-left: 20px;"><a href="Booth1 Page.html"><span class="icon">•</span>Booth 1</a></li>
+                <li style="padding-left: 20px;"><a href="Booth2 Page.html"><span class="icon">•</span>Booth 2</a></li>
+                <li style="padding-left: 20px;"><a href="Booth3 Page.html"><span class="icon">•</span>Booth 3</a></li>
+                <li style="padding-left: 20px;"><a href="Booth4 Page.html"><span class="icon">•</span>Booth 4</a></li>
+                <li><a href="Registration Page.html"><span class="icon">📝</span>Registration</a></li>
+                <li><a href="Leave Your Feedback Page.html"><span class="icon">💬</span>Feedback</a></li>
             </ul>
         </nav>
     </aside>
