Polish feedback page UI.

--- a/Leave Your Feedback Page.html
+++ b/Leave Your Feedback Page.html
@@ -46,13 +46,13 @@
         <input type="radio" name="gender" value="Female"> Female<br><br><br>
 
       <label for="rating">ให้คะแนนความพึงพอใจ (1–5)</label><br>
-      <input type="range" id="rating" name="rating" min="1" max="5" value="3"><br><br>
+      <input type="range" id="rating" name="rating" min="1" max="5" value="3">
 
-      <label for="comment">สิ่งที่ท่านชอบมากที่สุดในงานคืออะไร</label><br>
-      <textarea id="comment" name="comment" rows="4"></textarea><br><br>
+      <label for="comment_like">สิ่งที่ท่านชอบมากที่สุดในงานคืออะไร</label><br>
+      <textarea id="comment_like" name="comment_like" rows="4"></textarea><br><br>
 
-      <label for="comment">สิ่งที่ควรปรับปรุงสำหรับครั้งต่อไป</label><br>
-      <textarea id="comment" name="comment" rows="4"></textarea><br><br>
+      <label for="comment_improve">สิ่งที่ควรปรับปรุงสำหรับครั้งต่อไป</label><br>
+      <textarea id="comment_improve" name="comment_improve" rows="4"></textarea><br><br>
 
       
 
