Fix homepage Scroll Lag

--- a/index.html
+++ b/index.html
@@ -46,36 +46,36 @@
                 <div class="booth-section">
                     <span class="booth-title">Booth 1 : Grease & Cheese</span>
                     <div class="booth-image-content">
-                        <img src="img/pizza_booth.png" class="Homepage-picture" alt="Pizza">
-                        <img src="img/taco_booth.png" class="Homepage-picture" alt="Taco">
-                        <img src="img/burgerbooth.jpg" class="Homepage-picture" alt="Burger">
+                        <img src="img/pizza_booth.png" class="Homepage-picture" alt="Pizza" loading="lazy">
+                        <img src="img/taco_booth.png" class="Homepage-picture" alt="Taco" loading="lazy">
+                        <img src="img/burgerbooth.jpg" class="Homepage-picture" alt="Burger" loading="lazy">
                     </div>
                 </div>
 
                 <div class="booth-section">
                     <span class="booth-title">Booth 2 : KANOMWHANNN</span>
                     <div class="booth-image-content">
-                        <img src="img/cakebooth1.jpg" class="Homepage-picture" alt="Cake 1">
-                        <img src="img/cakebooth2.jpg" class="Homepage-picture" alt="Cake 2">
-                        <img src="img/cakebooth3.jpg" class="Homepage-picture" alt="Cake 3">
+                        <img src="img/cakebooth1.jpg" class="Homepage-picture" alt="Cake 1" loading="lazy">
+                        <img src="img/cakebooth2.jpg" class="Homepage-picture" alt="Cake 2" loading="lazy">
+                        <img src="img/cakebooth3.jpg" class="Homepage-picture" alt="Cake 3" loading="lazy">
                     </div>
                 </div>
 
                 <div class="booth-section">
                     <span class="booth-title">Booth 3 : Make Up</span>
                     <div class="booth-image-content">
-                        <img src="img/makeupbooth1.jpg" class="Homepage-picture" alt="Makeup 1">
-                        <img src="img/makeupbooth2.jpg" class="Homepage-picture" alt="Makeup 2">
-                        <img src="img/makeupbooth3.jpg" class="Homepage-picture" alt="Makeup 3">
+                        <img src="img/makeupbooth1.jpg" class="Homepage-picture" alt="Makeup 1" loading="lazy">
+                        <img src="img/makeupbooth2.jpg" class="Homepage-picture" alt="Makeup 2" loading="lazy">
+                        <img src="img/makeupbooth3.jpg" class="Homepage-picture" alt="Makeup 3" loading="lazy">
                     </div>
                 </div>
 
                 <div class="booth-section">
                     <span class="booth-title">Booth 4 : Activities Booth</span>
                     <div class="booth-image-content">
-                        <img src="img/activebooth1.jpg" class="Homepage-picture" alt="Active 1">
-                        <img src="img/activebooth2.jpg" class="Homepage-picture" alt="Active 2">
-                        <img src="img/activebooth3.jpg" class="Homepage-picture" alt="Active 3">
+                        <img src="img/activebooth1.jpg" class="Homepage-picture" alt="Active 1" loading="lazy">
+                        <img src="img/activebooth2.jpg" class="Homepage-picture" alt="Active 2" loading="lazy">
+                        <img src="img/activebooth3.jpg" class="Homepage-picture" alt="Active 3" loading="lazy">
                     </div>
                 </div>
             </section>
