Add feedback saving system (PHP + JSON).

--- a/Leave Your Feedback Page.html
+++ b/Leave Your Feedback Page.html
@@ -6,7 +6,7 @@
     <title>Feedback</title>
     <link rel="icon" type="image/png" href="img/G15_logo.png">
     <link rel="stylesheet" href="CSS/Leave Your Feedback Page.css">
-    <script src="Javascript/Homepage.js" defer></script>
+    <script src="Javascript/feedback.js" defer></script>
 </head>
 <body>
     
@@ -35,7 +35,7 @@
 
 
     
-    <form id="feedbackForm">
+    <form id="feedbackForm" action="feedback.php" method="POST">
 
         <h2>แบบประเมินความพึงพอใจ</h2>
       <label for="name">ชื่อผู้ประเมิน</label><br>
