add View all feedback page

--- a/Booth1 Page.html
+++ b/Booth1 Page.html
@@ -40,7 +40,8 @@
       </li>
 
       <li><a href="./Registration Page.html"><span class="icon">📝</span><span class="label1">Registration Page</span></a></li>
-      <li><a href="./Leave Your Feedback Page.html"><span class="icon">💬</span><span class="label1">Leave Your Feedback Page</span></a></li>
+      <li><a href="./Leave Your Feedback Page.html"><span class="icon">💬</span><span class="label1">Feedback</span></a>
+      <a href="./show_feedback.php"><span class="icon1">•</span><span class="label1">View all feedback</span></a></li>
     </ul>
   </nav>
 
