--- a/Booth2 Page.html
+++ b/Booth2 Page.html
@@ -21,7 +21,7 @@
     <a href="Booth2 Page.html">Booth2</a>
     <a href="Booth3 Page.html">Booth3</a>
     <a href="Booth4 Page.html">Booth4</a>
-    <a href="Leave Your Feedback Page.html">Leave Your Feedback</a>
+    <a href="Leave Your Feedback Page.html">Feedback</a>
     <a href="Registration Page.html">Registration</a>
   </div>
 </nav>
@@ -153,7 +153,8 @@
     <a href="Booth3 Page.html">Booth3</a>
     <a href="Booth4 Page.html">Booth4</a>
     <a href="Registration Page.html">Registration</a>
-    <a href="Leave Your Feedback Page.html">Leave Your Feedback</a>
+    <a href="Leave Your Feedback Page.html">Feedback</a>
+    <a href="show_feedback.php">View all feedback</a>
    </div>
 
   <script>
