--- a/Booth4 Page.html
+++ b/Booth4 Page.html
@@ -31,7 +31,8 @@
                     <a href="Booth4 Page.html"><span class="icon">•</span><span class="label">Booth4 Page</span></a>
                 </li>
                 <li><a href="Registration Page.html"><span class="icon">📝</span><span class="label">Registration Page</span></a></li>
-                <li><a href="Leave Your Feedback Page.html"><span class="icon">💬</span><span class="label">Leave Your Feedback Page</span></a></li>
+                <li><a href="Leave Your Feedback Page.html"><span class="icon">💬</span><span class="label">Feedback</span></a>
+                <a href="show_feedback.php"><span class="icon">•</span><span class="label">View all feedback</span></a></li>
             </ul>
         </nav>
     </aside>
