--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li style="padding-left: 20px;"><a href="Booth4 Page.html"><span class="icon">•</span>Booth 4</a></li>
                 <li><a href="Registration Page.html"><span class="icon">📝</span>Registration</a></li>
                 <li><a href="Leave Your Feedback Page.html"><span class="icon">💬</span>Feedback</a></li>
+                <li style="padding-left: 20px;"><a href="show_feedback.php"><span class="icon">•</span>View all feedback</a></li>
             </ul>
         </nav>
     </aside>
