--- a/Booth3 Page.html
+++ b/Booth3 Page.html
@@ -42,7 +42,8 @@
                     <a href="./Booth4 Page.html"><span class="icon">•</span><span class="label">Booth4 Page</span></a>
                 </li>
                 <li><a href="./Registration Page.html"><span class="icon">📝</span><span class="label">Registration Page</span></a></li>
-                <li><a href="./Leave Your Feedback Page.html"><span class="icon">💬</span><span class="label">Leave Your Feedback Page</span></a></li>
+                <li><a href="./Leave Your Feedback Page.html"><span class="icon">💬</span><span class="label">feedback</span></a>
+                <a href="show_feedback.php"><span class="icon">•</span><span class="label">View all feedback</span></a></li>
             
 
             </ul>
