Register update text

--- a/Registration Page.html
+++ b/Registration Page.html
@@ -49,7 +49,7 @@
                 </a>
             </div>
 
-            <p style="text-align:center; color:#666; margin-bottom: 20px;">กรอกข้อมูลเพื่อรับสิทธิ์เข้าชมโซนพิเศษ</p>
+            <p style="text-align:center; color:#666; margin-bottom: 20px;">กรุณากรอกข้อมูลให้ครบถ้วน</p>
 
             <div class="form-group">
                 <label for="fullname">ชื่อ-นามสกุล (Full Name)</label>
