--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dreamy Cloud Festival</title>
     <link rel="icon" type="image/png" href="img/G15_logo.png">
 
-    <link rel="stylesheet" href="Homepage.css">
+    <link rel="stylesheet" href="CSS/Homepage.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
