Add homepage details

--- a/index.html
+++ b/index.html
@@ -43,8 +43,15 @@
 
             <section>
                 <h2>🌒 Dreamy Cloud Festival ☁️</h2>
-                <p>Welcome to Dreamy Cloud Festival! Explore a variety of booths, enjoy fun activities, and make
-                    unforgettable memories with friends and family.</p>
+                <div class="description">
+                    <h3>เตรียมตัวให้พร้อม แล้วมาสร้างความทรงจำสุดประทับใจไปด้วยกันที่ Dreamy Cloud Festival!</h3>
+                    <hr>
+                    <h1>รวม 4 โซนความสุขที่คุณต้องห้ามพลาด!</h1>
+                    <li>🍕 Grease & Cheese: จัดเต็มความอร่อยแบบจุกๆ เอาใจสาย Fast Food และคนรักชีสยืดๆ</li>
+                    <li>🍰 KANOMWHANNN: เติมน้ำตาลเข้าเส้นกับกองทัพเบเกอรี่และขนมหวานหน้าตาดี ถ่ายรูปสวย</li>
+                    <li>💄 Make Up: อัปลุคให้เป๊ะปัง ช้อปเครื่องสำอางและสกินแคร์ตัวเด็ดเพื่อความสวยที่มั่นใจ</li>
+                    <li>🎯 Activities Booth: ปล่อยใจให้สนุกสุดเหวี่ยงกับซุ้มเกมงานวัดและกิจกรรม DIY ลุ้นของรางวัลเพียบ</li>
+                </div>
             </section>
 
             <hr>
